# InstructionEncoder

./: CMakeLists.txt  README.md
examples/: impossible_case.json  input_example.json
include/: allocator.hpp  generator.hpp  parser.hpp  types.hpp  utils.hpp  validator.hpp
src/: allocator.cpp  generator.cpp  main.cpp  parser.cpp  utils.cpp  validator.cpp
tests/: test_allocator.cpp  test_impossible.cpp  test_integration.cpp
